--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "app",
   "private": true,
   "devDependencies": {
-    "esbuild": "^0.25.2"
+    "autoprefixer": "^10.4.21",
+    "daisyui": "4",
+    "esbuild": "^0.25.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "3.4.17"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
