20250426_Add:Fry.ioデプロイ

--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
