--- a/compose.yml
+++ b/compose.yml
@@ -18,7 +18,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && ./bin/dev"
+    command: bash -c "bundle install && bundle exec rails db:prepare && rm -f tmp/pids/server.pid && bin/rails server -b 0.0.0.0 -p 7777"
     tty: true
     stdin_open: true
     volumes:
