--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "autoprefixer": "^10.4.21",
     "daisyui": "4",
     "esbuild": "^0.25.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "3.4.17"
+    "postcss": "^8.5.3"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
+    "build:css": "esbuild app/assets/stylesheets/application.css --outdir=app/assets/builds"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
