--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "daisyui": "4",
     "esbuild": "^0.25.2",
     "postcss": "^8.5.3"
   },
@@ -13,7 +12,10 @@
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^8.0.13"
+    "@hotwired/turbo-rails": "^8.0.13",
+    "@tailwindcss/vite": "^4.1.5",
+    "daisyui": "^4.12.24",
+    "tailwindcss": "^4.1.5"
   },
   "packageManager": "yarn@1.22.22"
 }
