20250512_delete:tailwindcss-ruby/rails + add:cssbundling-rails + CSSはTailwindをほぼ使用せずMVPまでまず持っていく形に変更。一時対応としてstyleで作成。

--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
-    "build:css": "esbuild app/assets/stylesheets/application.css --outdir=app/assets/builds"
+    "build:css": "npx @tailwindcss/cli -i app/assets/stylesheets/application.tailwind.css -o app/assets/builds/application.css",
+    "watch:css": "npx @tailwindcss/cli -i app/assets/stylesheets/application.tailwind.css -o app/assets/builds/application.css --watch"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
-    "@tailwindcss/vite": "^4.1.5",
-    "daisyui": "^4.12.24",
-    "tailwindcss": "^3.3.1"
+    "@tailwindcss/cli": "^4.1.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nested": "^7.0.2",
+    "tailwindcss": "^4.1.6"
   },
   "packageManager": "yarn@1.22.22"
 }
